css/styles.css
/*colors:
background: #FDFAF8
Accent: #FFC194
Section Titles: #B0A59E
text: #4E4C4C
navigation and labels: #282828
font-family: 'Maven Pro', sans-serif; 700 900 
font-family: 'Nunito Sans', sans-serif; 400 700 800
font-family: 'Rubik', sans-serif; 400 500 700
*/
html {
    scroll-behavior: smooth;
}
* {
    box-sizing: border-box;
}
body {
    background: #fdfaf8;
    font-family: 'Nunito Sans', sans-serif;
    font-size: 16px;
    font-weight: 400;
    color: #4E4C4C;
    line-height: 1.6;
}
section {
    padding: 2em 0;
}
h1,
h2,
h3 {
    margin: 0;
}
h1 {
    font-weight: 700;
    font-size: 2.4em;
    line-height: 1.3;
    font-family: 'Maven Pro', sans-serif;
    margin-block-start: 16px;
    margin-block-end: 16px;
}
.h1_subtitle {
    font-size: 40%;
    display: block;
}
h2 {
    font-weight: 900;
    font-size: 2em;
    line-height: 1.2;
    font-family: 'Maven Pro', sans-serif;
    color: #B0A59E;
    margin-block-start: 16px;
    margin-block-end: 16px;
    text-align: center;
}
h3,
.info-wrapper_heading {
    font-weight: 800;
    font-size: 0.8em;
    line-height: 1.2;
    font-family: 'Nunito Sans', sans-serif;
    color: #282828;
    text-transform: uppercase;
}
h4 {
    font-weight: 700;
    font-size: 1em;
    line-height: 1.2;
    font-family: 'Rubik', sans-serif;
}
p.info-wrapper_heading {
    font-weight: 700;
}
a {
    color:#FF7918;
}
a:visited {
    color: #FF7918;
}
a:hover {
    color: #742800;
}
a:focus {
    outline-color: #faaf78;
    outline-style: dotted;
    color: #742800;
    outline-width: 1px;
}
a:active {
    color: #E61C1C;
} 
button {
    border-width: 0;
    border-style:none;
    display: flex;
    align-items: flex-start;
    /*background-color: transparent;*/
    font-family: 'Maven Pro', sans-serif;
    font-weight: 700;
    font-size: 0.8em;
    color: #282828;
    border-bottom: 1px solid #4E4C4C;
}
button:hover {
    color:#933E10;
}
.button {
    display: inline-block;
    color: #ffffff;
    background-color: rgb(168, 121, 87);
    font-weight: 800;
    padding: 4px 8px;
    border-radius: 4px;
    transition: 0.2s;
    text-decoration: none;
}
.button:visited {
    color: #fff;
}
.button:hover {
    box-shadow: 0px 1px 16px rgba(105, 56, 21, 0.5);
    /*shadow does not respond to offset values*/
}
.button:focus {
    box-shadow: none;
    opacity: 0.8;
}
.button:active {
    color: #FF9243;
    background-color: transparent;
    border: 3px solid #FF9243;
}
.testing,
.research_container {
    align-items: flex-start;
}
figcaption {
    font-size: 0.75em;
}
figure {
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    margin-block-start: 0;
    margin-block-end: 0;
}
.container .hidden {
    display: none;
}
/* Layout styling */
.container {
    padding: 0 32px;
    display: flex;
    flex-direction: column;
    gap: 2em;
}
.hero {
    background-color: #FDFAF8;
    padding: 20px 0;
    display: inline-block;
    width: 100%;
    text-align: center;
}
a.logo {
    color: #4E4C4C; /*why is it not working..*/
    font-family: 'Maven Pro';
    font-size: 16px;
    font-weight: 900;
    text-decoration: none;
}
.navtoggle li .icon {
    position: absolute;
    right: 0;
    top: 0;
    padding-right: 0;
    padding-left: 0;

}
.navtoggle li:not(:last-child) {
    display: none;
}
.navtoggle,
.navtoggle.responsive {
    position: relative;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}
.navtoggle.responsive .nav{
    display: flex;
    flex-direction: column;
    margin-top: 1em;
    gap: 1em;
}
.navtoggle.responsive li {
    display: flex;
}
.navtoggle.responsive .nav > li > a {
    padding-left: 0;
}
header {
    /*position: relative;*/
    position: fixed;
    width: 100%;
    background-color: #e9ded6;
    padding: 1.5em 0 1em;
    box-shadow: 0 11px 29px rgba(176, 165, 158, 0.3)  ; 
	-webkit-box-shadow: 0 11px 29px rgba(176, 165, 158, 0.3)  ; 
	-moz-box-shadow: 0 11px 29px rgba(176, 165, 158, 0.3)  ; 
    z-index: 999;
    }
.nav {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.nav > li > a{
    padding: 16px 0;
    text-transform: lowercase;
    font-family: 'Maven Pro', sans-serif;
    font-weight: 700;
    color: #282828;
    text-decoration: none;
}
.nav > li > a:visited {
    color: #282828;
}
.nav > li > a:hover {
    color: #ec8339;
}
main {
    padding-top: 99px;
    display: flex;
    flex-direction: column;
}
ul {
    margin-block-start: 0;
    margin-block-end: 0;
}
.social > ul > li {
    list-style-type: none;
    max-width: 48px;
    position: relative;
    right: 0px;
}
footer {
    width: 100%;
    background-color: #454240;
    padding: 1.5em 0px;
    color: #FDFAF8;
}
.container.container_footer {
    align-items: center;
    gap: 8px;
}
#contactMe {
    color: #FDFAF8;
}
p.copyright{
margin-block-start: 0;
margin-block-end: 0;
}
header .container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 16px;
}
.row {
    margin: 24px 0;
    display: flex;
    flex-direction: column;
    gap: 24px;
}
.row.about-me_wrapper {
    text-align: left;
}
.column {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
.recent-projects_image {
    justify-content: center;
    position: relative;
}
.full-scr_img {
    width: 100%;
}
img {
    width: 100%;
}
#ab_img,
#prototype_img {
    max-height: 400px;
    width: auto;
}
.info-wrapper_list-item {
    font-size: 0.8em;
}
.list_label {
    font-weight: 800;
}
.main-message {
        display: flex;
        flex-direction: column;
        gap: 1em;
        padding: 1em 0;
    }
.main-message > p {
        margin-block-start: 0;
        margin-block-end: 0;
    }
.profile-img_wrapper {
        /*height: 300px;*/
        display: flex;
        line-height: 0;
        justify-content: center;
    }
.profile-img {
        /*height: 100%;*/
        object-fit: cover;
        aspect-ratio: 1 /1;
    }
.personas-journeys_container {
        display: flex;
        flex-direction: column;
        gap: 2em; 
    }
.contact {
        line-height: 0;
    }
@media only screen and (min-width: 640px) {
    main {
        padding-left: 2em;
        padding-right: 2em;
    }
    header {
        padding: 20px 0px;
      }
    nav {
        display: flex;
        align-items: center;
    }
    .nav {
        display: flex;
        flex-direction: row;
        gap: 1em;
        padding: 0 1em;
    }
    .nav > li {
        display: inline-block;
      }
    .navtoggle li:not(:last-child) {
        display: inline-block;
      }
    .navtoggle li:last-child {
        display :none;
    }
    .navtoggle { 
        justify-content: space-between; 
        flex-direction: row;
        gap: 1em;
    }
    .container {
        padding: 0 16px;
        gap: 3em;
    }

    .column {
        width: 50%;
    }
    header .container {
        flex-direction: row;
        justify-content: space-between;
    }
    .row {
        flex-direction: row;  
    }
    .info-wrapper {
        flex-wrap: nowrap;
        justify-content: space-between;
    }
    .info-wrapper_content {
        width: 33.33%;
    }
    .text_container {
        width: 50%;
        padding-left: 2em;
        padding-top: 1em;
    }
    .img_container {
        width: 50%;
        align-content: center;
    }
    .img_container.ab_img,
    .img_container.prototype_img {
        align-items: center;
    }
    .personas_wrapper {
        width: 100%;
    }
    .text_container_personas {
        gap: 2em;
    }
    .main-message {
        max-width: 730px;
    }
    .image_wrapper.row {
        align-content: baseline;
    }
    a.logo {
        font-size: 18px;
        padding: 0 1em;
    }
    .profile-img_wrapper {
        height: 400px;
        width: 70%;
        margin: 0 auto;
    }
    .profile-img {
        height: 100%;
        object-position: 0 35%;
    }
    .recent-projects_image-img {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        height: 100%;
        object-fit: cover;
        object-position: 0 5%;
    }
}
@media only screen and (min-width: 1024px) {
    body {
        font-size: 18px;
    }main {
        padding-left: 4em;
        padding-right: 4em;
    }
    /*.recent-projects_image {
        width: 65%;
    }*/
    /*.recent-projects_info {
        width: 35%;
    }*/
    
    .container {
        max-width: 1100px;
        margin-left: auto;
        margin-right: auto;
        padding: 0 32px;
        gap: 4em;
    }
    .info-wrapper_list-item {
        font-size: 0.7em;
    }
    .text_container_personas {
        gap: 3em;
    }
    .main-message {
        max-width: 900px;
    }
    .profile-img_wrapper {
        height: 400px;
    }
}
@media only screen and (min-width: 1440px) {
}

